deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: default
  labels:
    app: dashboard
spec:
  type: LoadBalancer
  selector:
    app: dashboard
  ports:
  - name: http
    port: 8080
    targetPort: 8080
