deployment/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: dashboard
spec:
  rules:
  - http: 
      paths:
      - path: /traces/1/*
        backend:
          serviceName: dashboard
          servicePort: 8080
