deployment/k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
  namespace: default
  labels:
    app: dashboard
spec:
  hosts:
  - '*'
  gateways:
  - front
  http:
  - match:
    route:
    - destination:
        port:
          number: 8080
        host: dashboard
